objects/ReportProjectProfile__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Report Profiles</relationshipLabel>
        <relationshipName>Report_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignee_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Report_Profiles4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignee_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportProfiles2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignee_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportProfiles3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutoCopy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Copy Reports for this category during the next scheduled job. System will create a copy based on the previous month report.</inlineHelpText>
        <label>Auto Copy?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CE_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CE 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportProfiles8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CE_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CE 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportProfiles9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CE_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CE 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportProfiles45I7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_for_Assignee_Escalation__c</fullName>
        <label>Days for Assignee Escalation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_for_CE_Escalation__c</fullName>
        <label>Days for CE Escalation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_for_QA_Escalation__c</fullName>
        <label>Days for QA Escalation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_for_Report_Upload__c</fullName>
        <label>Days for Report Upload</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_for_Supervisor_Escalation__c</fullName>
        <label>Days for Supervisor Escalation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalation_for_Assignee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalation for Assignee?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalation_for_CE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalation for CE?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalation_for_QA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalation for QA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalation_for_Supervisor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalation for Supervisor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTPEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable reports for this category to be FTP to Customer Site</inlineHelpText>
        <label>FTP Enabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Adhoc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QA_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportProfiles6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportProfiles7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportProfiles45Gz</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Category__c</fullName>
        <label>Report Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CAR Investigation Rpt</fullName>
                </value>
                <value>
                    <fullName>ConstAnalysis Rpt</fullName>
                </value>
                <value>
                    <fullName>CR Rpt</fullName>
                </value>
                <value>
                    <fullName>CT ExtractionRpt</fullName>
                </value>
                <value>
                    <fullName>Defect Density Rpt</fullName>
                </value>
                <value>
                    <fullName>Eng Lot Status Rpt</fullName>
                </value>
                <value>
                    <fullName>ETInline CPK Rpt</fullName>
                </value>
                <value>
                    <fullName>PPAP Documentation</fullName>
                </value>
                <value>
                    <fullName>WLR Rpt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_File_Name__c</fullName>
        <label>Report File Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SendToAssignee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send To Assignee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SendToQA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send To QA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SendToSupervisor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send To Supervisor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_System_Owner_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source System Owner 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Report_Profiles5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_System_Owner_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source System Owner 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Report_Profiles6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_System_Owner_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source System Owner 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Report_Profiles7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supervisor_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportProfiles4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supervisor_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportProfiles5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supervisor_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportProfiles45G8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Name__c</fullName>
        <label>Unique Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Report Profile</label>
    <listViews>
        <fullName>ALL_NEW</fullName>
        <columns>NAME</columns>
        <columns>CE_1__c</columns>
        <columns>CE_2__c</columns>
        <columns>CE_3__c</columns>
        <columns>CE_4__c</columns>
        <columns>CE_5__c</columns>
        <columns>QA_1__c</columns>
        <columns>QA_2__c</columns>
        <columns>QA_3__c</columns>
        <columns>QA_4__c</columns>
        <columns>QA_5__c</columns>
        <filterScope>Everything</filterScope>
        <label>All_New</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Report_Category__c</columns>
        <columns>AutoCopy__c</columns>
        <columns>FTPEnabled__c</columns>
        <columns>Frequency__c</columns>
        <columns>Unique_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Report Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Profiles</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>STM_AutoCopy_Not_Allowed_for_CAR_Rpt</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Report_Category__c, &apos;CAR Investigation Rpt&apos;)  &amp;&amp; AutoCopy__c</errorConditionFormula>
        <errorMessage>Auto Copy cannot be enabled for CAR reports.</errorMessage>
    </validationRules>
</CustomObject>